fixed contrast error in follow section

--- a/css/follow.css
+++ b/css/follow.css
@@ -7,7 +7,7 @@
 }
 
 .follow-subtitle-hashtag {
-  color: var(--brand-color-dark);
+  color: var(--brand-color-light);
   font-weight: 700;
 }
 
